[project]
name = "esp-wrapper"
version = "0.1.0"
description = "A simple and easy-to-use package wrapping the EskomSePush load shedding API."
authors = [
    {name = "spifory", email = "spifory@protonmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
