[project]
name = "esp-wrapper"
version = "0.1.0"
description = "A simple and easy-to-use package wrapping the EskomSePush load shedding API."
authors = [
    {name = "spifory", email = "spifory@protonmail.com"},
]
dependencies = [
    "aiohttp>=3.10.3",
    "attrs>=24.2.0",
    "type-extensions>=0.1.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["eskom", "load shedding", "eskomsepush"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://codeberg.org/spf/shedding.py"
Repository = "https://codeberg.org/spf/shedding.py"
Documentation = "https://sheddingpy.rtfd.io"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.1",
]
